<resources>
    <string name="app_name">AnFlix</string>
    <string name="mobie_thumbnail_img">mobie_thumbnail</string>

    <!-- MOVIE URLS -->
    <string name="base_url">http://api.themoviedb.org/3/discover/movie?api_key=</string>
    <string name="url_for_similar_movies">http://api.themoviedb.org/3/movie/</string>
    <string name="url_for_top_rated">http://api.themoviedb.org/3/movie/top_rated?api_key=</string>
    <string name="url_for_most_popular">http://api.themoviedb.org/3/movie/popular?api_key=</string>
    <string name="url_for_upcoming">http://api.themoviedb.org/3/movie/upcoming?api_key=</string>
    <string name="url_for_now_playing">http://api.themoviedb.org/3/movie/now_playing?api_key=</string>
    <string name="url_for_latest">http://api.themoviedb.org/3/movie/latest?api_key=</string>
    <string name="thumbnail_url">http://image.tmdb.org/t/p/</string>

    <!-- IMAGE QUALITY -->
    <string name="thumbnail_quality_1">w92</string>
    <string name="thumbnail_quality_2">w154</string>
    <string name="thumbnail_quality_3">w185</string>
    <string name="thumbnail_quality_4">w342</string>
    <string name="thumbnail_quality_5">w500</string>
    <string name="thumbnail_quality_6">w780</string>
    <string name="thumbnail_quality_original">original</string>


    <string name="play">Play</string>
    <string name="more_like_this">More Like This</string>
    <string name="apply_btn">Apply</string>

    <!-- LABELS FOR RADIOBUTTONS -->
    <string name="top_rated_label">Highest Rated</string>
    <string name="most_popular_label">Most Popular</string>
    <string name="upcoming_label">Upcoming</string>
    <string name="latest_label">Latest</string>
    <string name="now_playing_label">Now Playing</string>


    <string name="clear_selection">Clear All</string>
    <string name="vote_count_label">Number of People Voted :</string>
    <string name="language_label">Language :</string>
    <string name="network_request_started">started</string>
    <string name="network_request_finished">finished</string>
    <string name="customization_label">Customization</string>
    <string name="sort_menu">Sort</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="favourite_movie_label">Favourite Movies</string>
    <string name="trailers_label">Trailers</string>
    <string name="thumbnail_of_image_label">Thumbnail Of Image</string>
    <string name="no_item_in_the_list">No item in the List</string>


</resources>
