<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">


            <!-- TODO (14) Add the background while runtime in Java code with checking the build version -->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_title_tv"
                    android:textColor="@color/colorLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="16dp"
                    android:textStyle="bold"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"

                    app:layout_constraintBottom_toBottomOf="@id/movie_title_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/movie_title_tv"
                    app:layout_constraintTop_toTopOf="@id/movie_title_tv"
                    app:lottie_fileName="love_animation.json" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_rating_tv"
                    style="@style/PopularMovies.DetailMovie.MainImage.TextView"
                    android:textColor="@color/colorLine"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_title_tv"
                    app:layout_constraintEnd_toStartOf="@id/movie_release_date_tv"/>


                <TextView
                    android:id="@+id/movie_release_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    style="@style/PopularMovies.DetailMovie.MainImage.TextView"

                    app:layout_constraintStart_toEndOf="@id/movie_rating_tv"
                    app:layout_constraintTop_toTopOf="@id/movie_rating_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/movie_rating_tv" />


                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="32dp"
                    app:cardCornerRadius="8dp"
                    android:id="@+id/poster_card_view_cv"
                    android:layout_marginTop="16dp"

                    app:layout_constraintStart_toStartOf="@id/movie_title_tv"
                    app:layout_constraintEnd_toEndOf="@id/movie_title_tv"
                    app:layout_constraintTop_toBottomOf="@id/movie_release_date_tv">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:id="@+id/poster_image_iv"
                        android:scaleType="centerCrop"/>

                </android.support.v7.widget.CardView>


                <TextView
                    android:id="@+id/language_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorLine"
                    android:text="@string/language_label"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/poster_card_view_cv"/>

                <TextView
                    android:id="@+id/language_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#bfbdbd"

                    app:layout_constraintTop_toTopOf="@id/language_label_tv"
                    app:layout_constraintBottom_toBottomOf="@id/language_label_tv"
                    app:layout_constraintStart_toEndOf="@id/language_label_tv" />

                <TextView
                    android:id="@+id/vote_count_label_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorLine"
                    android:text="@string/vote_count_label"

                    app:layout_constraintStart_toStartOf="@id/language_label_tv"
                    app:layout_constraintTop_toBottomOf="@id/language_label_tv" />

                <TextView
                    android:id="@+id/vote_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#bfbdbd"

                    app:layout_constraintTop_toTopOf="@id/vote_count_label_tv"
                    app:layout_constraintBottom_toBottomOf="@id/vote_count_label_tv"
                    app:layout_constraintStart_toEndOf="@id/vote_count_label_tv" />

                <TextView
                    android:id="@+id/movie_description_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="#bfbdbd"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/vote_count_label_tv"
                    app:layout_constraintTop_toBottomOf="@id/vote_count_label_tv"
                    tools:text="@string/mobie_thumbnail_img" />


                <Button
                    android:id="@+id/add_to_favourites_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_favourites"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_description_tv" />


            </android.support.constraint.ConstraintLayout>


            <include layout="@layout/trailer_reviews_bottom_sheet" android:id="@+id/trailer_review_bs"/>

        </android.support.design.widget.CoordinatorLayout>







        <!-- <include layout="@layout/main_header_movie_description"
            android:id="@+id/header_layout"/>


        <TextView
            android:id="@+id/language_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="#bfbdbd"
            android:text="@string/language_label"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <TextView
            android:id="@+id/language_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="#bfbdbd"

            app:layout_constraintTop_toTopOf="@id/language_label_tv"
            app:layout_constraintBottom_toBottomOf="@id/language_label_tv"
            app:layout_constraintStart_toEndOf="@id/language_label_tv" />

        <TextView
            android:id="@+id/vote_count_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="#bfbdbd"
            android:text="@string/vote_count_label"

            app:layout_constraintStart_toStartOf="@id/language_label_tv"
            app:layout_constraintTop_toBottomOf="@id/language_label_tv" />

        <TextView
            android:id="@+id/vote_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:textColor="#bfbdbd"

            app:layout_constraintTop_toTopOf="@id/vote_count_label_tv"
            app:layout_constraintBottom_toBottomOf="@id/vote_count_label_tv"
            app:layout_constraintStart_toEndOf="@id/vote_count_label_tv" />

        <TextView
            android:id="@+id/movie_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textColor="#bfbdbd"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vote_count_label_tv"
            app:layout_constraintTop_toBottomOf="@id/vote_count_label_tv"
            tools:text="@string/mobie_thumbnail_img" />

        <TextView
            android:id="@+id/more_like_this_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#bfbdbd"
            android:text="@string/more_like_this"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@id/movie_description_tv"
            app:layout_constraintTop_toBottomOf="@id/movie_description_tv" />

        <Button
            android:id="@+id/add_to_favourites_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_favourites"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_like_this_label_tv"
            app:layout_constraintBottom_toTopOf="@id/similar_list_rv"/>



        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/similar_list_rv"
            android:layout_margin="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_like_this_label_tv"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_pb"
            android:visibility="visible"
            android:theme="@style/PopularMovies.CircularProgress"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/more_like_this_label_tv"/> -->







</layout>
